# DogApp2

./: .gitignore  LICENSE  QUICKSTART_WEBRTC.md  README.md  TROUBLESHOOTING.md  VIDEO_GUIDE.md  WEBRTC_GUIDE.md  flutter开发环境搭建.md  pubspec.yaml
android/: build.gradle.kts
android/app/: build.gradle.kts
doc/: interaction_report.md
dog/: create_test_video.py  dog_server.py  main.py  pyproject.toml  start_server.bat  users.json  webrtc_server.py
dog/assets/: activity_records.json  community.json  companion_status.json  dog_location.json  face_info.json  family_info.json  photo_info.json  reminders.json  schedules.json
dog/assets/videos/: README.md
dog/tools/: notify_test.py
ios/Runner/: Info.plist
lib/: main.dart
lib/screens/: auth_screen.dart  community_screen.dart  dog_screen.dart  health_screen.dart  help_screen.dart  help_screen_old.dart  manage_screen.dart  memory_photos_editor.dart  memory_qa_editor.dart  memory_screen.dart  monitor_screen.dart  notification_screen.dart  settings_screen.dart  today_screen.dart
lib/services/: api.dart  client_id.dart  health_data.dart  in_app_notification.dart  local_notification_service.dart  local_store.dart  notification_service.dart  web_event_source.dart  web_event_source_html.dart  web_event_source_stub.dart  webrtc_service.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
uploads/: activity_records.json  dog_location.json
web/: .gitignore  index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+4 files in other folders)
