[project]
name = "dog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=4.0.0",
    "opencv-python>=4.8.0",
    "aiortc>=1.6.0",
    "python-socketio>=5.10.0",
    "flask-socketio>=5.3.5",
]
